@@ -20,7 +20,11 @@
     sys::check-function-name    ; defined in trace.lisp
     sys::function-name-p        ; defined in control.d
     sys::function-block-name    ; defined in eval.d
+    sys::memq                   ; defined in list.d
     sys::gensym-list            ; defined in macros2.lisp
+    sys::make-signature         ; defined in functions.lisp
+    sys::sig-req-num sys::sig-opt-num sys::sig-rest-p ; likewise
+    sys::sig-keys-p sys::sig-keywords sys::sig-allow-p ; likewise
     ;; clos::generic-function-p ; defined in predtype.d
     ;; clos::class-p clos:class-of clos:find-class ; defined in predtype.d
     ;; clos::typep-class        ; defined in predtype.d
@@ -31,12 +35,9 @@
     ;; clos:slot-boundp clos:slot-makunbound ; defined in record.d
     ;; clos:slot-exists-p ; defined in record.d
     ;; clos::class-gethash clos::class-tuple-gethash ; defined in hashtabl.d
-    compiler::memq compiler::*keyword-package* ; defined in compiler.lisp
+    compiler::*keyword-package* ; defined in compiler.lisp
     compiler::%generic-function-lambda ; defined in compiler.lisp
     compiler::%optimize-function-lambda ; defined in compiler.lisp
-    compiler::make-signature compiler::sig-req-num compiler::sig-opt-num
-    compiler::sig-rest-p compiler::sig-keys-p compiler::sig-keywords
-    compiler::sig-allow-p compiler::signature ; defined in compiled.lisp
     compiler::analyze-lambdalist              ; ditto
     ;; clos:generic-flet clos:generic-labels ; treated in compiler.lisp
     ;; Export:
